--- a/app/src/main/res/layout/activity_section_b2.xml
+++ b/app/src/main/res/layout/activity_section_b2.xml
@@ -22,185 +22,6 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
         android:orientation="vertical">
-        <!--kb heading-->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="2dp"
-            android:background="@color/colorPrimaryDark"
-            android:gravity="center"
-            android:text="@string/kb2heading"
-            android:textSize="40sp" />
-
-        <!--kb201-->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorPrimary"
-            android:text="@string/kb201"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@android:color/white" />
-        <RadioGroup
-            android:id="@+id/kb201"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <RadioButton
-                android:id="@+id/kb201a"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="1dp"
-                android:layout_weight="1"
-                android:text="@string/yes" />
-
-            <RadioButton
-                android:id="@+id/kb201b"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="1dp"
-                android:layout_weight="1"
-                android:text="@string/no" />
-
-            <RadioButton
-                android:id="@+id/kb20198"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="1dp"
-                android:layout_weight="2"
-                android:text="@string/dkn" />
-        </RadioGroup>
-
-        <!--kb202-->
-<LinearLayout
-    android:id="@+id/fldGrpkb202"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:visibility="gone">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/kb202"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white" />
-
-    <!--weeks-->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/week"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white" />
-    <EditText
-        android:id="@+id/kb202w"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:digits="0123456789"
-        android:hint="@string/week"
-        android:inputType="number"
-        android:maxLength="2" />
-
-    <!--months-->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/months"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white" />
-    <EditText
-        android:id="@+id/kb202m"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:digits="0123456789"
-        android:hint="@string/months"
-        android:inputType="number"
-        android:maxLength="2" />
-
-<!--kb203-->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/kb203"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white" />
-    <RadioGroup
-        android:id="@+id/kb203"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <RadioButton
-            android:id="@+id/kb203a"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:layout_weight="1"
-            android:text="@string/yes" />
-
-        <RadioButton
-            android:id="@+id/kb203b"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:layout_weight="1"
-            android:text="@string/no" />
-    </RadioGroup>
-
-    <!--kb204-->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/kb204"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white" />
-    <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
-        android:id="@+id/kb204"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:focusable="true"
-        android:hint="@string/kb204"
-        android:padding="15dp"
-        android:textColor="@android:color/black"
-        app:dateFormat="dd-MM-yyyy"
-        app:minDate="01/01/1917" />
-
-    <!--kb205-->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/kb205"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white" />
-    <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
-        android:id="@+id/kb205"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:focusable="true"
-        android:hint="@string/kb205"
-        android:padding="15dp"
-        android:textColor="@android:color/black"
-        app:dateFormat="dd-MM-yyyy"
-        app:minDate="01/01/1917" />
 
     <!--kb206-->
     <TextView
@@ -215,7 +36,7 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
         android:id="@+id/kb206"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/kb206a"
@@ -254,15 +75,13 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
         <RadioGroup
             android:id="@+id/kb207"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <RadioButton
                 android:id="@+id/kb207a"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
-                android:layout_weight="1"
                 android:text="@string/kb207a" />
 
             <RadioButton
@@ -270,42 +89,36 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
-                android:layout_weight="1"
                 android:text="@string/kb207b" />
             <RadioButton
                 android:id="@+id/kb207c"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
-                android:layout_weight="1"
                 android:text="@string/kb207c" />
             <RadioButton
                 android:id="@+id/kb207d"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
-                android:layout_weight="1"
                 android:text="@string/kb207d" />
             <RadioButton
                 android:id="@+id/kb207e"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
-                android:layout_weight="1"
                 android:text="@string/kb207e" />
             <RadioButton
                 android:id="@+id/kb207f"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
-                android:layout_weight="1"
                 android:text="@string/kb207f" />
             <RadioButton
                 android:id="@+id/kb20796"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
-                android:layout_weight="1"
                 android:text="@string/other" />
         </RadioGroup>
         <EditText
@@ -318,6 +131,9 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
             android:text='@{kb20796.checked ? kb20796x.getText.toString : ""}'
             android:visibility='@{kb20796.checked ? View.VISIBLE : View.GONE}'
             android:inputType="textCapWords" />
+
+
+
 <!--kb208-->
         <TextView
             android:layout_width="match_parent"
@@ -333,7 +149,7 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:digits="0123456789"
-            android:hint="@string/kb208"
+            android:hint="@string/times"
             android:inputType="number"
             android:maxLength="2" />
         <!--end of skipping pattern kb206-->
@@ -350,15 +166,13 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
     <RadioGroup
         android:id="@+id/kb209"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <RadioButton
             android:id="@+id/kb209a"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
-            android:layout_weight="1"
             android:text="@string/kb209a" />
 
         <RadioButton
@@ -366,14 +180,12 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
-            android:layout_weight="1"
             android:text="@string/kb209b" />
         <RadioButton
             android:id="@+id/kb209c"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
-            android:layout_weight="1"
             android:text="@string/kb209c" />
 
     </RadioGroup>
@@ -548,7 +360,7 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
-            android:text="@string/kb21196" />
+            android:text="@string/other" />
 
     </RadioGroup>
     <EditText
@@ -571,74 +383,75 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
         android:text="@string/kb212"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@android:color/white" />
-    <RadioGroup
+    <LinearLayout
         android:id="@+id/kb212"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <RadioButton
+        <CheckBox
             android:id="@+id/kb212a"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:text="@string/kb212a" />
-        <RadioButton
+        <CheckBox
             android:id="@+id/kb212b"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:text="@string/kb212b" />
-        <RadioButton
+        <CheckBox
             android:id="@+id/kb212c"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:text="@string/kb212c" />
-        <RadioButton
+        <CheckBox
             android:id="@+id/kb212d"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:text="@string/kb212d" />
 
-        <RadioButton
+        <CheckBox
             android:id="@+id/kb212e"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:text="@string/kb212e" />
-        <RadioButton
+        <CheckBox
             android:id="@+id/kb212f"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:text="@string/kb212f" />
-        <RadioButton
+        <CheckBox
             android:id="@+id/kb212g"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:text="@string/kb212g" />
-        <RadioButton
+        <CheckBox
             android:id="@+id/kb212h"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:text="@string/kb212h" />
-        <RadioButton
+        <CheckBox
             android:id="@+id/kb212i"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:text="@string/kb212i" />
-        <RadioButton
+        <CheckBox
             android:id="@+id/kb21296"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
-            android:text="@string/kb21296" />
+            android:text="@string/other" />
 
-    </RadioGroup>
+    </LinearLayout>
     <EditText
         android:id="@+id/kb21296x"
         android:layout_width="match_parent"
@@ -663,7 +476,7 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
         android:id="@+id/kb213"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/kb213a"
@@ -686,7 +499,7 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:text="@string/dkn" />
     </RadioGroup>
 
@@ -930,7 +743,7 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
         android:id="@+id/kb218"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/kb218a"
@@ -953,7 +766,7 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:text="@string/dkn" />
     </RadioGroup>
     <!--skip pattern kb219-->
@@ -978,9 +791,9 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
-            android:hint="@string/kb219a"
+            android:hint="@string/times"
             android:inputType="number"
-            android:maxLength="1"
+            android:maxLength="2"
             android:text='@{kb21998.checked ? kb219.getText.toString : ""}'
             android:visibility='@{kb21998.checked ? View.GONE : View.VISIBLE}' />
 
@@ -1079,7 +892,7 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
-                android:text="@string/kb22096" />
+                android:text="@string/other" />
 
         </RadioGroup>
         <EditText
@@ -1093,11 +906,44 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
             android:visibility='@{kb22096.checked ? View.VISIBLE : View.GONE}'
             android:inputType="textCapWords" />
 
-    </LinearLayout>
+
 
 
     //end of skip pattern of kb201
 </LinearLayout>
+
+
+        <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="80dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_End"
+                style="@style/buttons"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/red"
+                android:onClick="@{() -> callback.BtnEnd()}"
+                android:text="@string/end_interview"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btn_Continue"
+                style="@style/buttons"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#1ed61e"
+                android:onClick="@{() -> callback.BtnContinue()}"
+                android:text="@string/nextSection"
+                android:textColor="@color/white"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 </ScrollView>
