--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,6 +100,14 @@
                 android:layout_marginTop="16dp"
                 android:onClick="@{() -> callback.openForm()}"
                 android:text="OPEN FORM" />
+            <Button
+                android:id="@+id/openA"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openA"
+                android:text="OPEN B1" />
 
             <Button
                 android:id="@+id/syncServer"
